finished for now until I think of more features.  fixed the overflow problem and made sure to make external links target_blank

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,15 @@
+/* TARGETING THE BODY + HTML WITH OVERFLOW HIDDEN AND POSITION RELATIVE IS THE ONLY WAY TO STOP THE MOON COVER FROM OVERFLOWING */
+
 html {
   overflow: hidden;
+  position: relative;
 }
 
 body {
   font-family: monospace;
   color: white;
   background-color: #000000;
+  position: relative;
   overflow: hidden;
 }
 
